<resources>
    <string name="app_name" translatable="false">NekoBox</string>
    <string name="app_name_long" translatable="false">NekoBox for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="quick_enable">Enable</string>
    <string name="quick_disable">Disable</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">sing-box Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="layout">Layout</string>
    <string name="layout_single_column">Single column</string>
    <string name="layout_double_column">Double column</string>
    <string name="sort_and_layout">Sort and Layout</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription">%d Proxies | Updated on %s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated">%s: Updated %d proxies</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="port_http">HTTP Proxy Port</string>
    <string name="port_transproxy">Transproxy Port</string>
    <string name="cag_route">Route Settings</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">App Settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="ws_browser_forwarding">Browser Forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward corresponding WebSockets through the browser.</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="show_stop">Show Stop Button</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS Routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of
        potential DNS leaks</string>
    <string name="enable_fakedns">Enable FakeDNS</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped</string>
    <string name="port_local_dns">Local DNS Port</string>
    <string name="require_transproxy">Enable Transproxy Inbound</string>
    <string name="transproxy_mode">Transproxy Mode</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="route_rules_provider">Rule Assets Provider</string>
    <string name="route_opt_bypass_lan">Bypass LAN</string>
    <string name="traffic_sniffing">Enable Traffic Sniffing</string>
    <string name="enable_mux">Enable Multiplexer</string>
    <string name="mux_sum">Mux is designed to reduce TCP handshake latency, not to increase
        connection throughput. Using Mux to watch videos, download or speed test is usually counter
        productive. If the server does not support it, you will not be able to access the Internet.</string>
    <string name="mux_concurrency">Max Streams</string>
    <string name="tcp_keep_alive_interval">TCP keep active packet delivery interval</string>
    <string name="proxied_apps">Apps VPN mode</string>
    <string name="proxied_apps_summary">Configure VPN mode for selected apps</string>
    <string name="add_profile">Add Profile</string>
    <string name="action_socks" translatable="false">SOCKS</string>
    <string name="action_http" translatable="false">HTTP</string>
    <string name="action_shadowsocks" translatable="false">Shadowsocks</string>
    <string name="action_vmess" translatable="false">VMess</string>
    <string name="action_trojan" translatable="false">Trojan</string>
    <string name="action_trojan_go" translatable="false">Trojan Go</string>
    <string name="action_mieru" translatable="false">Mieru</string>
    <string name="action_naive" translatable="false">Naïve</string>
    <string name="action_anytls" translatable="false">AnyTLS</string>
    <string name="action_hysteria" translatable="false">Hysteria</string>
    <string name="action_ssh" translatable="false">SSH</string>
    <string name="action_wireguard" translatable="false">WireGuard</string>
    <string name="action_tuic" translatable="false">TUIC</string>
    <string name="action_juicity" translatable="false">Juicity</string>
    <string name="proxy_chain">Proxy Chain</string>
    <string name="custom_config">Custom Config</string>
    <string name="clear_profiles">Clear</string>
    <string name="action_export_file">Export to file</string>
    <string name="action_export_clipboard">Export to Clipboard</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import from Clipboard</string>
    <string name="action_import_file">Import from file</string>
    <string name="share_qr_nfc">QR code</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
    <string name="add_profile_methods_manual_settings">Manual Settings</string>
    <string name="deduplication">Deduplication</string>
    <string name="night_mode">Night Mode</string>
    <string name="enable_log">Enable Log</string>
    <string name="enable_log_sum">For debugging purposes</string>
    <string name="always_show_address">Always Show Address</string>
    <string name="always_show_address_sum">Always display the server address on the configuration
        card</string>
    <string name="clear_traffic_statistics">Clear traffic statistics</string>
    <string name="connection_test_clear_results">Clear test results</string>
    <string name="connection_test_tcp_ping" translatable="false">TCPing</string>
    <string name="connection_test_url_test" translatable="false">URL Test</string>
    <string name="append_http_proxy">Append HTTP Proxy to VPN</string>
    <string name="append_http_proxy_sum">HTTP proxy will be used directly from (browser/ some
        supported apps), without going through the virtual NIC device (Android 10+)</string>
    <string name="protocol_settings">Protocol Settings</string>
    <string name="subscription_settings">Subscription Settings</string>
    <string name="group_type">Group Type</string>
    <string name="force_resolve">Force Resolve</string>
    <string name="force_resolve_sum">Resolve all domain names to IP addresses when updating. Host
        and SNI will be automatically appended if possible</string>
    <string name="deduplication_sum">Remove duplicate configurations when updating</string>
    <string name="update_settings">Update Settings</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_delay">Auto Update Delay (In minutes)</string>
    <string name="update_when_connected_only">Update only when connected</string>
    <string name="update_when_connected_only_sum">Prevent IP address leakage</string>
    <string name="subscription_user_agent">UserAgent</string>
    <string name="group_order">Order</string>
    <string name="group_order_origin">Origin</string>
    <string name="group_order_by_name">By Name</string>
    <string name="group_order_by_delay">By Delay</string>
    <string name="copy_label">Copy Name</string>
    <string name="copy_package_name">Copy Package Name</string>
    <string name="open_app">Open App</string>
    <string name="open_settings">Open Settings</string>
    <string name="open_market">Open Market</string>
    <string name="create_rule">Create Rule</string>
    <string name="profile_traffic_statistics">Profile Traffic Statistics</string>
    <string name="profile_traffic_statistics_summary">When disabled, the used traffic will not be
        counted</string>
    <string name="tun_implementation">TUN Implementation</string>
    <string name="resolve_destination">Resolve Destination</string>
    <string name="resolve_destination_summary">If the destination address is a domain, it is then
        passed out based on the IPv6 strategy (conflicts with FakeDNS)</string>
    <string name="mtu" translatable="false">MTU</string>
    <string name="acquire_wake_lock">Acquire WakeLock</string>
    <string name="acquire_wake_lock_summary">Keep the CPU on</string>
    <string name="connection_test_delete_unavailable">Clear unavailable</string>
    <string name="app_tls_version">Subscription Min TLS Version</string>
    <string name="show_bottom_bar">Show bottom bar like SagerNet</string>
    <string name="enable_clash_api">Enable Clash API</string>
    <string name="enable_clash_api_summary">Provide clash api and yacd dashboard at 127.0.0.1:9090</string>
    <string name="use_selector">Use selector</string>
    <string name="front_proxy">Front proxy</string>
    <string name="landing_proxy">Landing Proxy</string>
    <string name="action_shadowtls" translatable="false">ShadowTLS</string>
    <string name="share_subscription">Share Subscription</string>
    <string name="remove_duplicate">Remove duplicate servers</string>
    <string name="update_current_subscription">Update current Group\'s subscription</string>
    <string name="global_mode">Global Mode</string>
</resources>